@@ -1,18 +1,28 @@
 package com.springboot.blog.service.impl;
 
 import com.springboot.blog.entity.Category;
+import com.springboot.blog.entity.Post;
 import com.springboot.blog.exception.ResourceNotFoundException;
 import com.springboot.blog.payload.CategoryDto;
+import com.springboot.blog.payload.CategoryResponse;
+import com.springboot.blog.payload.PostDto;
+import com.springboot.blog.payload.PostResponse;
 import com.springboot.blog.repository.CategoryRepository;
 import com.springboot.blog.service.CategoryService;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
     private CategoryRepository categoryRepository;
+    private ModelMapper mapper;
+
     private ModelMapper modelMapper;
 
     public CategoryServiceImpl(CategoryRepository categoryRepository, ModelMapper modelMapper) {
@@ -34,9 +44,23 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public List<CategoryDto> getAllCategories() {
-        List<Category> categories = categoryRepository.findAll();
-        return categories.stream().map(category -> modelMapper.map(category, CategoryDto.class)).toList();
+    public CategoryResponse getAllCategories(int pageNo, int pageSize, String sortBy, String sortDir) {
+//        List<Category> categories = categoryRepository.findAll();
+//        return categories.stream().map(category -> modelMapper.map(category, CategoryDto.class)).toList();
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
+                ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending();
+        //create Pageable instance
+        Page<Category> categories = categoryRepository.findAll(PageRequest.of(pageNo, pageSize, sort));
+        List<Category> listOfCategories= categories.getContent();
+        List<CategoryDto> content =  listOfCategories.stream().map(category -> mapToDto(category)).collect(Collectors.toList());
+        CategoryResponse categoryResponse = new CategoryResponse();
+        categoryResponse.setCategories(content);
+        categoryResponse.setPageNo(categories.getNumber());
+        categoryResponse.setPageSize(categories.getSize());
+        categoryResponse.setTotalElements(categories.getTotalElements());
+        categoryResponse.setTotalPages(categories.getTotalPages());
+        categoryResponse.setLast(categories.isLast());
+        return categoryResponse;
     }
 
     @Override
@@ -52,5 +76,21 @@ public class CategoryServiceImpl implements CategoryService {
     public void deleteCategory(Long id) {
         Category category = categoryRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Category", "id", id.toString()));
         categoryRepository.delete(category);
+    }
+
+    //convert entity to DTO
+    private CategoryDto mapToDto(Category category) {
+        CategoryDto categoryDto = modelMapper.map(category, CategoryDto.class);
+
+
+        return categoryDto;
+    }
+
+    //convert DTO to entity
+    private Category mapToEntity(CategoryDto categoryDto) {
+        Category category = modelMapper.map(categoryDto, Category.class);
+
+
+        return category;
     }
 }
